--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>Hello world</p>
+    <p>Hello world!!!</p>
 </body>
 </html>
