--- a/lesson1/index.html
+++ b/lesson1/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <p>Hello!</p>
-    <div>Banner 123</div>
+    <p>Hello</p>
+    <div>World!</div>
 </body>
 </html>
